# routes/iam/v1/v1.go
@@ -2,6 +2,7 @@ package iamv1
 
 import (
 	"github.com/Manuel-Leleuly/kanban-flow-go/controllers"
+	"github.com/Manuel-Leleuly/kanban-flow-go/middlewares"
 	"github.com/Manuel-Leleuly/kanban-flow-go/models"
 	"github.com/gin-gonic/gin"
 )
@@ -11,5 +12,6 @@ func IAMV1Routes(router *gin.RouterGroup, d *models.DBInstance) {
 	{
 		v1.POST("/login", d.MakeHTTPHandleFunc(controllers.Login))
 		v1.POST("/users", d.MakeHTTPHandleFunc(controllers.CreateUser))
+		v1.POST("/token/refresh", d.MakeHTTPHandleFunc(middlewares.CheckRefreshToken), controllers.RefreshToken)
 	}
 }
